# MasterThesisLucas

./: .gitignore  CMakeLists.txt  LICENSE.txt  MnistLoader.ipynb  README.md  grapher.ipynb  lineErrorTimestepBH.csv  lineErrorTimestepBHMultipole.csv  lineErrorTimestepBHReverse.csv  lineErrorTimestepBHReverseMultipole.csv
data/: P_matrix_amount1000_perp30.mtx
graphCSV/: lineErrorTimestepBH.csv  lineErrorTimestepBHMultipole.csv  lineErrorTimestepBHReverse.csv  lineErrorTimestepBHReverseMultipole.csv  lineErrorTimestepFMM.csv
shaders/: discoShader.fs  shader.fs  shaderLine.fs  shaderLine2D.fs  shaderLine2D.vs  shaderPoint.fs  shaderPoint.vs  shaderPos2Dvel2Dcol3D.fs  shaderPos2Dvel2Dcol3D.vs  shaderQuad.fs  shaderQuad.vs  shaderTsne.fs  shaderTsne.vs
src/: Timer.h  buffer.h  camera.h  common.h  data.h  enums.h  ffthelper.h  gravitysim.h  loader.h  main.cpp  nBodyScenarios.h  nbodySim.h  octtree.h  particle.h  particleMesh.h  scene.h  shader.h  texture.h  tsne.h  visquad.h
src/cameras/: camera.h  normalCamera.h  tsneCamera.h
src/codeData/: data.h
src/dataLoaders/: loader.h
src/nBodyInstances/: gravitysim.h  nBodyScenarios.h  nbodySim.h  tsne.h  tsneGpu.h  tsneTests.h  tsne_buffers.h  tsne_no_buffers.h
src/nbodysolvers/: nBodySolver.h  nBodySolverBarnesHut.h  nBodySolverBarnesHutReverse.h  nBodySolverBarnesHutReverseMultiPole.h  nBodySolverFMM.h  nBodySolverFMMiter.h  nBodySolverGpuNaive.h  nBodySolverMultiPole.h  nBodySolverNaive.h
src/openGLhelper/: buffer.h  scene.h  shader.h  texture.h
src/particles/: embeddedPoint.h  morton_point.h  particle2D.h  (+5 more)
(+59 files in other folders)
